(library
  (name examples)
  (libraries coq-base.lib))

(rule
  (target File.v)
  (action (run coqffi -p coq-base -m FreeSpec %{cmi:file} -o %{target})))

(rule
  (target Rectypes.v)
  (action (run coqffi -ftransparent-types %{cmi:rectypes} -o %{target})))

(coq.theory
  (name Examples)
  (modules Rectypes File))