(library
  (name examples)
  (libraries coq-base.lib))

(rule
  (target File.v)
  (action (run coqffi -finterface -p coq-base %{cmi:file} -o %{target})))

(rule
  (target Rectypes.v)
  (action (run coqffi -ftransparent-types %{cmi:rectypes} -o %{target})))

(rule
  (target Poly.v)
  (action (run coqffi -finterface -p coq-base %{cmi:poly} -o %{target})))

(coq.theory
  (name Examples)
  (theories CoqFFI)
  (modules Rectypes File Poly))